// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`7449693: [Given] the label is 'this is a mock string' [Expect] the returned label to match' 1`] = `false`;

exports[`7449694: [Given] the label is 'null' [Expect] the returned label to match' 1`] = `true`;

exports[`CopyButton Component 7378438: [Given] no props are provided [Expect] the component to render 1`] = `
<div
  id="root"
>
  <button
    class="nui-button copy-button nui-button--none nui-button--square nui-button--disabled nui-button--v1"
    disabled=""
    type="button"
  >
    <i
      class="nui-button_icon q4i-clone-duplicate-4pt"
    />
  </button>
</div>
`;

exports[`CopyButton Component 7378439: [Given] the copy the text value is 'null' [Expect] the button to be disabled 1`] = `
<button
  class="nui-button copy-button nui-button--none nui-button--square nui-button--disabled nui-button--v1"
  disabled=""
  id="MockCopyButtonId"
  type="button"
>
  <i
    class="nui-button_icon q4i-clone-duplicate-4pt"
    id="MockCopyButtonIdIcon"
  />
</button>
`;

exports[`isCopyButtonDisabled 7449693: [Given] the label is 'this is a mock string' [Expect] the returned label to match' 1`] = `false`;

exports[`isCopyButtonDisabled 7449694: [Given] the label is 'null' [Expect] the returned label to match' 1`] = `true`;
